# Password-Manager-Client-in-Rust

./: Cargo.toml  README.md  icons.toml
src/: constraints.rs  encryption.rs  entries.rs  main.rs  model.rs  requests.rs  totp.rs
src/gui/: actions.rs  add_entry_prompt.rs  add_entry_response_dialog.rs  app.rs  app_top_wrapper.rs  auth_prompt.rs  auth_response_dialog.rs  authentication.rs  entry_list_item.rs  login.rs  main_window.rs  mod.rs  utils.rs
src/tests/: mod.rs  test_enc_req.rs  test_encryption.rs  test_gui.rs  test_requests.rs  test_totp.rs
