[package]
name = "rust-password-manager-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
relm4 = "0.8.1"
reqwest = { version = "0.12.4", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
