[package]
name = "rust-password-manager-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
gtk4 = { version = "0.8.2", features = ["v4_12"] }
jsonwebtoken = "9.3.0"
libadwaita = { version = "0.6.0", features = ["v1_5"] }
relm4 = { version = "0.8.1", features = ["libadwaita"] }
reqwest = { version = "0.12.4", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version ="1.0.116", features = ["raw_value"] }
