[package]
name = "rust-password-manager-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
gtk4 = { version = "0.9.0", features = ["v4_12"] }
jsonwebtoken = "9.3.0"
adw = { package = "libadwaita", version = "0.7.0", features = ["v1_5"] }
regex = "1.10.5"
relm4 = { version = "0.9.0", features = ["libadwaita"] }
reqwest = { version = "0.12.5", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version ="1.0.118", features = ["raw_value"] }
totp-rs = { version = "5.5.1", features = ["zeroize", "steam"] }
rayon = "1.10.0"
relm4-icons = { version = "0.9.0", features = ["icon-development-kit"] }
random-string = "1.1.0"
